--- a/indexx.html
+++ b/indexx.html
@@ -43,8 +43,8 @@
 
     <div class="card">
         <h1>Hola ??</h1>
-        <p id="mensaje">Pulsa el botÛn</p>
-        <button onclick="cambiarMensaje()">Click aquÌ</button>
+        <p id="mensaje">Pulsa el bot√≥n</p>
+        <button onclick="cambiarMensaje()">Click aqu√≠</button>
     </div>
 
     <script>
@@ -52,7 +52,7 @@
             "Hola mundo ??",
             "Python > todo",
             "HTML no muerde",
-            "JS est· vivo ??",
+            "JS est√° vivo ??",
             "Buen click"
         ];
 
@@ -61,6 +61,7 @@
             document.getElementById("mensaje").textContent = mensajes[random];
         }
     </script>
+<a href="segunda.html">Ir a la segunda p√°gina</a>
 
 </body>
 </html>
